--- a/LungLife/lunglife_frontend/src/app/auth/login/pages/forgot/forgot.page.html
+++ b/LungLife/lunglife_frontend/src/app/auth/login/pages/forgot/forgot.page.html
@@ -9,12 +9,13 @@
     </div>
 
     <!-- Forgot Password Form -->
-  <form (ngSubmit)="onSubmit()" class="auth-form refresh">
+    <form (ngSubmit)="onSubmit()" class="auth-form refresh">
 
       <!-- Email Field -->
       <div class="form-group">
         <ion-item lines="none">
-          <ion-input type="email" placeholder="Correo electrónico" [(ngModel)]="email" name="email" required></ion-input>
+          <ion-input type="email" placeholder="Correo electrónico" [(ngModel)]="email" name="email"
+                     required></ion-input>
         </ion-item>
       </div>
 
@@ -24,7 +25,7 @@
       }
 
       <!-- Submit Button -->
-  <ion-button type="submit" expand="block" class="auth-button primary" [disabled]="isLoading || !email">
+      <ion-button type="submit" expand="block" class="auth-button primary" [disabled]="isLoading || !email">
         @if (isLoading) {
           <ion-spinner name="crescent"></ion-spinner>
         } @else {
